--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,3 +170,10 @@ section p a{
 button#shuffle{
     width: 100%;
 }
+
+@media screen and (max-width: 720px) {
+    section{
+        width: calc( 100% - 20px);
+        margin: 10px;
+    }
+} 
